# ticTacToe

./: CMakeLists.txt  README.md  funs.cpp  funs.hpp  main.cpp
.github/workflows/: c-cpp.yml
gtest/: CMakeLists.txt
test/: CMakeLists.txt  exampleTests.cpp
